[gd_scene load_steps=4 format=3 uid="uid://dq84t7fggoxpk"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_wer5j"]
[ext_resource type="Texture2D" uid="uid://ctlp7ttyjbs4e" path="res://Assets/Typey Jose.png" id="2_l3g7i"]
[ext_resource type="Texture2D" uid="uid://7c02126sy4qi" path="res://Assets/credit screen.png" id="3_kbypf"]

[node name="menu" type="Node2D"]
script = ExtResource("1_wer5j")

[node name="menuScreen" type="Sprite2D" parent="."]
position = Vector2(583, 304.5)
scale = Vector2(1.25729, 1.31296)
texture = ExtResource("2_l3g7i")

[node name="normalButton" type="Button" parent="."]
offset_left = 196.0
offset_top = 418.0
offset_right = 337.0
offset_bottom = 518.0
theme_override_font_sizes/font_size = 30
text = "Flappy"

[node name="typeyButton" type="Button" parent="."]
offset_left = 765.0
offset_top = 419.0
offset_right = 916.0
offset_bottom = 518.0
theme_override_font_sizes/font_size = 30
text = "Typey"

[node name="music" type="AudioStreamPlayer2D" parent="."]

[node name="credits" type="Button" parent="."]
offset_left = 456.0
offset_top = 496.0
offset_right = 604.0
offset_bottom = 569.0
theme_override_font_sizes/font_size = 30
text = "CREDITS"

[node name="soundEffect" type="AudioStreamPlayer2D" parent="."]

[node name="creditScreen" type="Sprite2D" parent="."]
visible = false
position = Vector2(589.5, 337)
scale = Vector2(1.27604, 1.31852)
texture = ExtResource("3_kbypf")

[node name="LinkButton" type="LinkButton" parent="creditScreen"]
offset_left = -304.457
offset_top = -3.79211
offset_right = 217.543
offset_bottom = 38.2079
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.886275, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.843137, 1)
theme_override_font_sizes/font_size = 30
text = "Click to see the wonders of his mind"
uri = "https://www.youtube.com/@Struneyes"

[node name="creditScreenButton" type="Button" parent="creditScreen"]
offset_left = -431.412
offset_top = 131.966
offset_right = -182.412
offset_bottom = 208.966
theme_override_font_sizes/font_size = 30
text = "Return "

[connection signal="pressed" from="normalButton" to="." method="_on_normal_button_pressed"]
[connection signal="pressed" from="typeyButton" to="." method="_on_typey_button_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="creditScreen/creditScreenButton" to="." method="_on_credit_screen_button_pressed"]
